backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: tickets
        tier: backend
    spec:
      containers:
        - name: ticket-api
          image: scottxxx666/tickets-api:1.0.0
          ports:
            - containerPort: 4000
  selector:
    matchLabels:
      app: tickets
      tier: backend
