backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tickets-api
spec:
  selector:
    app: tickets
    tier: backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: LoadBalancer
