frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: tickets-frontend
spec:
  selector:
    app: tickets
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: tickets
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: tickets
        tier: frontend
        track: stable
    spec:
      containers:
        - name: nginx
          image: "scottxxx666/tickets:1.0.5"
          lifecycle:
            preStop:
              exec:
                command: ["/usr/sbin/nginx","-s","quit"]
